[package]
name = "spaceship"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["bevy_asset", "bevy_color", "bevy_gilrs", "bevy_render", "bevy_sprite", "bevy_state", "bevy_text", "bevy_ui", "bevy_window", "bevy_winit", "custom_cursor", "png", "wav", "webgl2"] }
fastrand = "2.0.1"
winit = { version = "0.30.5", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
winit = { version = "0.30.5", default-features = false, features = ["x11"] }
